--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Lab"
         tools:targetApi="31">
         <activity
-            android:name="com.example.khudyakovlab.views.MainActivity"
+            android:name="com.example.khudyakovlab.ui.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
